--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "express-session": "^1.18.1",
     "fhir-validator": "^0.1.0",
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^3.0.7",
+    "mariadb": "^3.4.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.14.0",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
