--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.1",
     "fhir-validator": "^0.1.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^3.0.7",
     "mariadb": "^3.4.2",
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
+    "pdfkit": "^0.17.1",
+    "peer": "^1.0.2",
+    "peerjs": "^1.5.4",
+    "select2": "^4.1.0-rc.0",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
